# xgjing1105

./: .dockerignore  .editorconfig  .gitignore  .mcp.json  CHANGELOG.md  Dockerfile  README.md  build.cmd  conftest.py  docker-compose.yml  docker-entrypoint.sh  nuitka-build.toml  pytest.ini  requirements.txt  run_utf8.py  sitecustomize.py  start_server.py  tmp_check_indexeddb.py  tmp_deep_scan_agents.py  tmp_find_agents_storage.py  verify_chain.py  天机v9.1-全量评估企划书.md  天机v9.1-最优执行指令集.md  天机v9.1升级企划书 — 基于四大开源架构对比的融合进化方案  天机v9.2.1架构推演 — 基于2026最新开源架构的融合进化方案.md
.tianji/: archive_input_20260704.json  offline_writes.json
.trae/: .ignore  .tianji_boundary_home.json  hooks.json  ignore  mcp.json  settings.json
active_memory/: README.md  __init__.py  conversation_hook.py  protocol.py  trae_capture.py
adapters/: README.md  __init__.py  ai_platform_adapters.py  base.py  cherryclaw_adapter.py  remote_clients.py  remote_stub.py  strategy_interface.py  trae_adapter.py  unified_adapter.py  vscode_adapter.py
agents/: README.md  __init__.py  baiqiao.py  build_agent.py  dongcha.py  evolver.py  gongzao.py  graphbuilder.py  jingwei.py  jinshu.py  kuangshi.py  lingxi.py  luling.py  miaobi.py  mingjing.py  multimodal.py  orchestrator.py  pipeline_logger.py  qianli.py  recovery_agent.py  shiguan.py  (+9 more)
trae-test-workspace/python/: pyproject.toml  requirements.txt
trae-test-workspace/python/src/: calculator.py
trae-test-workspace/python/tests/: test_calculator.py
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/src/: lib.rs  main.rs
(+1168 files in other folders)
